--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
         <section class="summary">
             <h2>About Me</h2>
-            <p>I am a Computer Science graduate specializing in IT Infrastructure, Automation, and Cloud Services. Currently based in Reno, NV.</p>
+            <p>I am a Computer Science graduate specializing in IT Infrastructure, Automation, and Cloud Services. Currently based in Reno, NV. SWAG</p>
         </section>
 
         <section class="skills">
