retro-future aesthetic

--- a/index.html
+++ b/index.html
@@ -3,38 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rithvik Ram | IT Professional</title>
+    <title>GonkDroideka // System_Root</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- Retro Font -->
+    <link href="[https://fonts.googleapis.com/css2?family=VT323&family=Orbitron:wght@400;700&display=swap](https://fonts.googleapis.com/css2?family=VT323&family=Orbitron:wght@400;700&display=swap)" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <header>
-            <h1>Rithvik Ram</h1>
-            <p>IT Technician | System Administrator | Cloud Enthusiast</p>
-            <div class="links">
-                <a href="mailto:your-email@example.com">Email Me</a> |
-                <a href="[https://linkedin.com/in/yourprofile](https://linkedin.com/in/yourprofile)" target="_blank">LinkedIn</a>
+    <div class="crt-overlay"></div>
+    <div class="scanlines"></div>
+
+    <div class="desktop">
+        <!-- Main Terminal Window -->
+        <div class="window main-window">
+            <div class="title-bar">
+                <div class="title">RESUME.EXE</div>
+                <div class="controls">
+                    <span>_</span><span>□</span><span>×</span>
+                </div>
             </div>
-        </header>
+            <div class="content">
+                <header>
+                    <h1 class="neon-text">Rithvik Ram</h1>
+                    <p class="subtitle">> SYSTEM ADMINISTRATOR_</p>
+                </header>
 
-        <section class="summary">
-            <h2>About Me</h2>
-            <p>I am a Computer Science graduate specializing in IT Infrastructure, Automation, and Cloud Services. Currently based in Reno, NV. SWAG</p>
-        </section>
+                <section>
+                    <h2>[ ABOUT ]</h2>
+                    <p>Computer Science graduate specializing in IT Infrastructure and Cloud Automation. Executing operations in Reno, NV.</p>
+                </section>
 
-        <section class="skills">
-            <h2>Technical Skills</h2>
-            <ul>
-                <li>Active Directory & Windows Server</li>
-                <li>Azure Fundamentals (AZ-900)</li>
-                <li>PowerShell Automation</li>
-                <li>Network Security</li>
-            </ul>
-        </section>
-        
-        <footer>
-            <p>Hosted on Azure Static Web Apps</p>
-        </footer>
+                <section>
+                    <h2>[ SKILLS ]</h2>
+                    <div class="grid">
+                        <div class="skill-tag">Azure Cloud</div>
+                        <div class="skill-tag">Active Directory</div>
+                        <div class="skill-tag">PowerShell</div>
+                        <div class="skill-tag">Network Sec</div>
+                    </div>
+                </section>
+
+                <div class="links">
+                    <a href="#">EMAIL</a>
+                    <a href="[https://github.com/GonkDroideka](https://github.com/GonkDroideka)">GITHUB</a>
+                    <a href="#">LINKEDIN</a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
