--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     <h2>Recent Projects</h2>
                     <div class="project-item">
                         <h3>Azure Static Resume</h3>
-                        <p>You're looking at it. A CI/CD deployed portfolio using GitHub Actions.</p>
+                        <p>Beans Beans Beans. A CI/CD deployed portfolio using GitHub Actions.</p>
                     </div>
                     <div class="project-item">
                         <h3>PowerShell Automation</h3>
@@ -166,9 +166,9 @@
                             </a>
 
                             <!-- GitHub Button -->
-                            <a href="[https://github.com/GonkDroideka](https://github.com/GonkDroideka)" target="_blank" class="win95-btn large-btn">
+                            <a href="https://github.com/GonkDroideka" target="_blank" class="win95-btn large-btn">
                                 <!-- GitHub Icon -->
-                                <img src="[https://img.icons8.com/dusk/64/000000/github.png](https://img.icons8.com/dusk/64/000000/github.png)" alt="GitHub" class="contact-img">
+                                <img src="https://img.icons8.com/dusk/64/000000/github.png" alt="GitHub" class="contact-img">
                                 <div class="btn-text">
                                     <strong>GitHub</strong><br>
                                     <small>@GonkDroideka</small>
