--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Rithvik Ram // Portfolio</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- Retro Fonts: Press Start 2P (Header), MS Sans Serif (UI), VT323 (Terminal) -->
-    <link href="[https://fonts.googleapis.com/css2?family=Press+Start+2P&family=MS+Sans+Serif&family=VT323&display=swap](https://fonts.googleapis.com/css2?family=Press+Start+2P&family=MS+Sans+Serif&family=VT323&display=swap)" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=MS+Sans+Serif&family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="crt-overlay"></div>
@@ -76,7 +76,7 @@
                         <div class="skill-card" onclick="triggerNav('media')">
                             <div class="card-icon">🎬</div>
                             <h3>Media Production</h3>
-                            <p>Film Making, Guitar & Bass Composition.</p>
+                            <p>I make movies and play some music. Check it out.</p>
                             <span class="link-text">View Media →</span>
                         </div>
 
@@ -84,26 +84,24 @@
                         <div class="skill-card" onclick="triggerNav('services')">
                             <div class="card-icon">🎓</div>
                             <h3>Tutoring</h3>
-                            <p>Mentorship in Logic, Code, and Music.</p>
+                            <p>Mentorship in Guitar, Bass Guitar, and Coding/Logic.</p>
                             <span class="link-text">View Services →</span>
                         </div>
                     </div>
                 </div>
 
-                <!-- PAGE: ABOUT -->
-                <div id="about" class="page">
+                <!-- PAGE: BLOG -->
+                <div id="blog" class="page">
                     <h2>About Me</h2>
-                    <p>I graduated with a CS degree, but I'm more interested in how systems *feel* than just how they run. I'm a fan of legacy OS vibes, droid-tier hardware, and automated workflows.</p>
-                    <p>By day, I'm navigating IT infrastructure and cloud deployments in Reno, NV.</p>
+                    <p>Blog. I am blogging</p>
+                    <p>Blog Blog.</p>
                 </div>
 
                 <!-- PAGE: SERVICES -->
                 <div id="services" class="page">
                     <h2>Services Offered</h2>
                     <ul>
-                        <li><strong>Cloud Architecture:</strong> Azure & AWS deployment strategies.</li>
-                        <li><strong>System Administration:</strong> Windows Server, AD, & Linux management.</li>
-                        <li><strong>Web Development:</strong> Retro-styled frontends with modern backends.</li>
+                        <li><strong>Web Development:</strong> Can design websites to meet clients needs .</li>
                         <li><strong>Technical Tutoring:</strong> Mentorship in Computer Science logic and coding basics.</li>
                         <li><strong>Music Instruction:</strong> Private lessons for Guitar and Bass.</li>
                     </ul>
@@ -131,20 +129,20 @@
                     <h2>Media Production</h2>
                     <div class="media-section">
                         <h3>Film & Video</h3>
-                        <p>Independent filmmaking and visual storytelling. Archiving visual inspiration from 80s sci-fi and analog horror.</p>
+                        <p>I make stuff (will populate page later).</p>
                     </div>
                     <hr class="win-divider">
                     <div class="media-section">
                         <h3>Music (Guitar & Bass)</h3>
-                        <p>Composition and performance. Currently exploring Synthwave, Lo-Fi, and 16-Bit OSTs.</p>
-                        <p><em>Check the Media Player in the top right for a demo track.</em></p>
+                        <p>EEEEEEEEEEEEEEEEEEE.</p>
+                        <p><em>Check the Media Player in the top right for a boss ass track.</em></p>
                     </div>
                 </div>
 
                 <!-- PAGE: EVENTS -->
                 <div id="events" class="page">
                     <h2>Calendar</h2>
-                    <p><strong>Next Goal:</strong> AZ-900 Certification Review.</p>
+                    <p><strong>Upcoming:</strong> Band going on tour.</p>
                     <p><strong>Location:</strong> Reno, NV.</p>
                 </div>
 
@@ -217,7 +215,7 @@
                 // Update Title Bar
                 const titles = {
                     'home': 'Rithvik Ram - Portfolio',
-                    'about': 'About Me',
+                    'blog': 'Blog',
                     'services': 'Services',
                     'projects': 'Projects',
                     'media': 'Media Production',
