--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <!-- Bottom Taskbar Navigation (Fixed) -->
         <div class="nav-bottom">
             <button class="win95-btn active" data-target="home" onclick="showPage('home', this)">Home</button>
-            <button class="win95-btn" data-target="about" onclick="showPage('about', this)">About</button>
+            <button class="win95-btn" data-target="about" onclick="showPage('blog', this)">Blog</button>
             <button class="win95-btn" data-target="services" onclick="showPage('services', this)">Services</button>
             <button class="win95-btn" data-target="projects" onclick="showPage('projects', this)">Projects</button>
             <button class="win95-btn" data-target="media" onclick="showPage('media', this)">Media</button>
