--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <div id="home" class="page active">
                     <div class="hero-section animate-up">
                         <h1 class="glitch-header" data-text="Rithvik Ram">Rithvik Ram</h1>
-                        <p class="subtitle">System Administrator | Cloud Infrastructure | A/V Technician</p>
+                        <p class="subtitle">Computer Guy | Cloud Infrastructure | Music Meister</p>
                         <p style="font-size: 0.9rem; margin-top: 5px;">Reno, NV | <i class="fas fa-envelope"></i> rithvik2001@gmail.com</p>
                         <hr class="win-divider">
                     </div>
@@ -75,14 +75,14 @@
                         </div>
                         <div class="skill-card" onclick="triggerNav('media')">
                             <div class="card-icon"><i class="fas fa-film"></i></div>
-                            <h3>Media & A/V</h3>
-                            <p>Live Production Support, Audio Mixing, and Creative Content.</p>
+                            <h3>Media</h3>
+                            <p>Hey I did a thing.</p>
                             <span class="link-text">View Media <i class="fas fa-arrow-right"></i></span>
                         </div>
                         <div class="skill-card" onclick="triggerNav('services')">
                             <div class="card-icon"><i class="fas fa-toolbox"></i></div>
                             <h3>Services & Skills</h3>
-                            <p>IT Administration, Automation Scripting, and Technical Tutoring.</p>
+                            <p>IT Administration, Web Design, Music Tutoring.</p>
                             <span class="link-text">View Services <i class="fas fa-arrow-right"></i></span>
                         </div>
                     </div>
@@ -260,11 +260,11 @@
                                 <div class="hero-img-container"><img src="images/videostore-COLLAGE.jpg" alt="Videostore Band" class="hero-poster"><div class="caption">THE BAND</div></div>
                             </div>
                             <div class="events-section">
-                                <h2 class="neon-header">UPCOMING SHOWS</h2>
+                                <h2 class="neon-header">UPCOMING EVENTS</h2>
                                 <div id="upcoming-list" class="event-grid"></div>
                             </div>
                             <div class="events-section">
-                                <h2 class="neon-header dimmed">PAST TRANSMISSIONS</h2>
+                                <h2 class="neon-header dimmed">PAST EVENTS</h2>
                                 <div id="past-list" class="event-grid"></div>
                             </div>
                         </div>
