updated content in project and services

--- a/index.html
+++ b/index.html
@@ -134,14 +134,6 @@
                         </ul>
                     </div>
                     <div class="win-panel">
-                        <h3><i class="fas fa-terminal"></i> Scripting & Automation</h3>
-                        <p>Reducing manual overhead through code.</p>
-                        <ul class="skill-list">
-                            <li><strong>PowerShell:</strong> Automating administrative tasks and VM lifecycle management.</li>
-                            <li><strong>Batch Scripting & Task Scheduler:</strong> Routine system maintenance automation.</li>
-                        </ul>
-                    </div>
-                    <div class="win-panel">
                         <h3><i class="fas fa-code"></i> Web & Design</h3>
                         <ul class="skill-list">
                             <li><strong>Development:</strong> HTML/CSS, C#/.NET Framework.</li>
@@ -177,6 +169,14 @@
                             <li>Developed PowerShell scripts to automate routine administrative tasks, including VM lifecycle management (Start/Stop/Snapshot).</li>
                             <li>Created automated health-check scripts to monitor system uptime and log performance metrics.</li>
                             <li>Reduced manual configuration time for lab environments by approximately 40% through script execution.</li>
+                        </ul>
+                    </div>
+					<div class="win-panel">
+                        <h3>Non-Profit Web Solution</h3>
+                        <div class="date-loc">Web Development & UI/UX</div>
+                        <ul class="project-list">
+                            <li>Designed and deployed a responsive website for the Pearls of Africa Children's Fund, translating client requirements into technical specifications.</li>
+                            <li>Utilized Figma for high-fidelity prototyping to ensure UI/UX accessibility compliance before coding.</li>
                         </ul>
                     </div>
                     <div class="win-panel">
