added march event

--- a/index.html
+++ b/index.html
@@ -527,7 +527,8 @@
         
         const bandEvents = [
             { date: '2026-02-01', displayDate: 'Feb 1, 2026', venue: 'The Holland Project', location: 'Reno, NV', flyer: 'images/holland.jpg', details: 'w/ Jo Passed, Rotten Heights. $10 Adv / $12 Door. 7PM.', link: 'https://hollandreno.org' },
-            { date: '2026-02-06', displayDate: 'Feb 6, 2026', venue: '7825 Lichen Drive', location: 'Citrus Heights, CA', flyer: 'images/sac_flyer_2.jpg', details: 'Frontseat58 Feature. $15 Door. 6:30PM.', link: '#' }
+            { date: '2026-02-06', displayDate: 'Feb 6, 2026', venue: '7825 Lichen Drive', location: 'Citrus Heights, CA', flyer: 'images/sac_flyer_2.jpg', details: 'Frontseat58 Feature. $15 Door. 6:30PM.', link: '#' },
+			{ date: '2026-03-18', displayDate: 'Mar 18, 2026', venue: '670 E. Prater Way', location: 'Sparks, NV', flyer: 'images/pizzava.jpg', details: 'insane mixed bill with Who Brought Opie from Oregon and our hometown friends Shower Poopers and Boot Bunny. $10 Door. 7PM.', link: '#' }
         ];
 
         let currentTrackIndex = -1;
