--- a/index.html
+++ b/index.html
@@ -467,7 +467,8 @@
                 location: 'Citrus Heights, CA', 
                 flyer: 'images/sac_flyer_2.jpg', 
                 details: 'Frontseat58 Feature. $15 Door. 6:30PM.' 
-            }
+            },
+			{ date: '2026-03-18', displayDate: 'Mar 18, 2026', venue: '670 E. Prater Way', location: 'Sparks, NV', flyer: 'images/pizzava.jpg', details: 'insane mixed bill with Who Brought Opie from Oregon and our hometown friends Shower Poopers and Boot Bunny. $10 Door. 7PM.', link: '#' }
         ];
 
         function renderEvents() {
